# blorp

./: .dockerignore  .env.example  .gitignore  .oxlintrc.json  .yarnrc.yml  Dockerfile  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.md  app.json  capacitor.config.ts  chromatic.config.json  components.json  eas.json  index.html  ionic.config.json  latest.json  netlify.toml  package.json  playwright.config.ts  routes.d.ts  tailwind.config.js  tamagui-toast.d.ts  todo.md  tsconfig.json  vite-storybook.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: chromatic.yml  deploy-pr.yml  deploy-prod.yml  docker-publish.yml  docker.yml  one-pr.yml  one.yml  playwright.yml  test.yml  vitest-commit.yml  vitest-pr.yml  vitest.yml
.husky/: pre-commit
.storybook/: main.ts  preview.tsx
.yarn/patches/: @tailwindcss-typography-npm-0.5.16-675125d30f.patch
android/: .project  capacitor.settings.gradle
android/app/: .project  build.gradle  capacitor.build.gradle
app/: _layout.css  _layout.native.tsx  _layout.tsx  auth.tsx  index.tsx  md.tsx  privacy.tsx  support.tsx  tamagui.css
app/(tabs)/: _layout.tsx  chat.tsx  create.tsx  inbox.tsx  index.tsx  settings.tsx
app/posts/: [postId].tsx
config/tamagui/: animations.native.ts  animations.ts  colors.ts  fonts.ts  scale.ts  tamagui.config.ts  themes.ts  themesOut.ts  tokens.ts
coverage/: coverage-final.json  editor-state.ts.html  index.html
e2e/: community.spec.ts  login.spec.ts  pages.spec.ts  post-feeds.spec.ts  post.spec.ts  static-pages.spec.ts
ios/App/: Podfile
metadata/en-US/: full_description.txt  short_description.txt
public/: manifest.json  tamagui.css
public/.well-known/: apple-app-site-association  assetlinks.json
public/locales/: en.json
scripts/: build-android.sh  build-macos.sh  build-release.sh  build-tauri.sh  bump-version.sh  dev.sh  update-licenses.js  validate-tauri.sh
src/: App.tsx  Router.tsx  actions.ts  background-runner.js  env.ts  i18n.ts  i18next-types.d.ts  index.css  main.tsx  markdown-editor.css  tailwind-preflight.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src2/: App.tsx  Router.tsx  index.css
test-utils/: api.ts  express.js  lemmy.ts  tanstack-query.tsx
(+381 files in other folders)
