[package]
name = "Blorp"
version = "1.9.14"
description = "Blorp for Lemmy"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[profile.release]
opt-level = 3   # Optimize for size (or "3" for max performance)
lto = true        # Enable Link-Time Optimization
codegen-units = 1 # Forces Rust to optimize better

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.5", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-http = "2.3.0"
tauri-plugin-prevent-default = "1"
tauri-plugin-opener = "2.2.5"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-process = "2.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"
